--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "Josef Schugt <josef.schugt@benndorf.de>",
     "Simon Seyock <simonseyock@gmail.com>"
   ],
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/KlausBenndorf/guide4you-module-urlapi"
