--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "concurrently": "2.2.0",
     "esdoc": "0.4.7",
     "mocha": "2.5.3",
+    "phantomjs": "^2.1.7",
     "pre-commit": "1.1.3",
     "selenium-webdriver": "2.53.3",
     "standard": "7.1.2",
