--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "guide4you-module-urlapi",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "An urlapi module for Guide4You.",
   "keywords": [
     "urlapi",
@@ -21,29 +21,26 @@
     "url": "https://github.com/KlausBenndorf/guide4you-module-urlapi"
   },
   "dependencies": {
-    "guide4you": "1.0.0",
-    "guide4you-builder": "1.0.3",
+    "guide4you": "1.0.1",
+    "guide4you-builder": "1.0.4",
     "guide4you-proxy": "github:KlausBenndorf/guide4you-proxy#v1.0.0"
   },
   "devDependencies": {
-    "concurrently": "^2.2.0",
-    "esdoc": "^0.4.7",
-    "mocha": "^2.2.5",
-    "pre-commit": "^1.1.3",
-    "selenium-webdriver": "^2.46.1",
-    "standard": "^7.0.1",
-    "wait-on": "^1.5.2"
+    "concurrently": "2.2.0",
+    "esdoc": "0.4.8",
+    "mocha": "3.0.2",
+    "selenium-webdriver": "2.53.3",
+    "phantomjs-prebuilt": "2.1.11",
+    "standard": "7.1.2",
+    "wait-on": "1.5.2"
   },
   "scripts": {
     "build": "g4u-build -m prod -c",
     "dev": "g4u-build -m dev -c",
-    "lint": "eslint src/",
+    "lint": "eslint src/ tests/",
     "pretest": "g4u-buildTests",
     "runTests": "npm run lint && wait-on -l http://localhost:8080 && mocha build/tests/*",
-    "test": "concurrently --kill-others --success first \"npm run dev conf/simple\" \"npm run runTests\" && echo \"Tests completed successfully\"",
+    "test": "concurrently --kill-others --success first \"g4u-build -m dev -c conf/simple\" \"npm run runTests\" && echo \"Tests completed successfully\"",
     "doc": "esdoc -c esdoc.json"
-  },
-  "pre-commit": [
-    "lint"
-  ]
+  }
 }
