--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "dev": "g4u-build -m dev -c",
     "pretest": "g4u-buildTests",
     "lint": "eslint src/",
-    "runTests": "npm run lint && wait-on -l http://localhost:8080 && mocha build/tests/*",
+    "runTests": "npm run lint && wait-on -l http-get://localhost:8080 && mocha build/tests/*",
     "test": "concurrently --kill-others --success first \"g4u-build -m dev -c conf/full\" \"npm run runTests\" && echo \"Tests completed successfully\"",
     "doc": "esdoc -c esdoc.json"
   }
