Updated openlayers version

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "jquery": "3.1.0",
     "lodash": "4.14.1",
     "notifyjs-browser": "0.4.2",
-    "openlayers": "github:KlausBenndorf/ol3#g4u3_3.17.1",
+    "openlayers": "github:KlausBenndorf/ol3#g4u3_v3.18.2",
     "proj4": "2.3.14",
     "strip-json-comments": "2.0.1"
   },
