--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "guide4you-module-search-guide4you-server",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "A G4U Server search parser module for Guide4You.",
   "keywords": [ "search", "g4u server", "map", "map client", "openlayers" ],
   "author": "Klaus Benndorf",
@@ -12,32 +12,27 @@
     "Simon Seyock <simonseyock@gmail.com>"
   ],
   "dependencies": {
-    "guide4you": "1.1.*",
-    "guide4you-builder": "1.0.*",
-    "guide4you-proxy": "github:KlausBenndorf/guide4you-proxy#v1.0.0"
+    "guide4you": "1.1.1",
+    "guide4you-builder": "1.0.6",
+    "guide4you-proxy": "github:KlausBenndorf/guide4you-proxy#v1.0.0",
+    "guide4you-module-search": "1.1.0"
+  },
+  "devDependencies": {
+    "concurrently": "2.2.0",
+    "esdoc": "0.4.8",
+    "mocha": "3.0.2",
+    "selenium-webdriver": "2.53.3",
+    "phantomjs-prebuilt": "2.1.11",
+    "standard": "8.0.0",
+    "wait-on": "1.5.2"
   },
   "scripts": {
-    "build": "g4u-build -s frame -s dev -c",
-    "dev": "g4u-build -s dev -c",
-    "devServer": "g4u-build -s frame -s devServer -c",
-    "release": "g4u-build -s frame -s release -c",
-    "--buildTests": "cp tests/selenium/*.json build/tests/selenium/ && babel tests/selenium/*.js --out-dir build/ --presets es2015",
-    "--buildUnitTests": "node scripts/buildTest.js --inputMask=tests/unit-tests/*_spec.js --outputDir=build/tests/unit-tests/",
-    "--selenium": "mocha build/tests/selenium/*",
-    "--unitTest": "mocha build/tests/unittests/*",
-    "--lint": "standard src/**/*.js",
-    "--test": "npm run lint && npm run selenium && npm run unitTest",
-    "--jsdoc": "jsdoc src/configurators/ --destination doc/",
-    "gInstall": "npm install ../guide4you && npm install ../guide4you-builder"
-  },
-  "config": {
-    "builds": {
-      "simple": "conf/simple/build.json",
-      "routing": "conf/simple/build.json",
-      "module-search": "conf/simple/build.json",
-      "guide4you-module-search": "conf/simple/build.json",
-      "guide4you-module-search-guide4you": "conf/simple/build.json",
-      "guide4you-module-search-guide4you-server": "conf/simple/build.json"
-    }
+    "build": "g4u-build -m prod -c",
+    "dev": "g4u-build -m dev -c",
+    "lint": "eslint src/ tests/",
+    "pretest": "g4u-buildTests",
+    "runTests": "npm run lint && wait-on -l http-get://localhost:8080 && mocha build/tests/*",
+    "test": "concurrently --kill-others --success first \"g4u-build -m dev -c conf/simple\" \"npm run runTests\" && echo \"Tests completed successfully\"",
+    "doc": "esdoc -c esdoc.json"
   }
 }
