--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "Simon Seyock <simonseyock@gmail.com>"
   ],
   "dependencies": {
-    "guide4you": "1.1.1",
-    "guide4you-builder": "1.0.6",
+    "guide4you": "1.1.*",
+    "guide4you-builder": "1.0.*",
     "guide4you-proxy": "github:KlausBenndorf/guide4you-proxy#v1.0.0",
-    "guide4you-module-search": "1.1.0"
+    "guide4you-module-search": "1.1.*"
   },
   "devDependencies": {
     "concurrently": "2.2.0",
