--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "guide4you-module-search",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "A search parser module for Guide4You.",
   "keywords": [
     "search",
@@ -21,8 +21,8 @@
     "url": "https://github.com/KlausBenndorf/guide4you-module-search"
   },
   "dependencies": {
-    "guide4you": "1.1.1",
-    "guide4you-builder": "1.0.6",
+    "guide4you": "1.1.*",
+    "guide4you-builder": "1.0.*",
     "guide4you-proxy": "github:KlausBenndorf/guide4you-proxy#v1.0.0"
   },
   "devDependencies": {
