--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "guide4you-module-urlapi",
-  "version": "1.1.0",
+  "version": "1.2.1",
   "description": "An urlapi module for Guide4You.",
   "keywords": [
     "urlapi",
@@ -21,8 +21,8 @@
     "url": "https://github.com/KlausBenndorf/guide4you-module-urlapi"
   },
   "dependencies": {
-    "guide4you": "1.1.0",
-    "guide4you-builder": "1.0.4",
+    "guide4you": "1.2.*",
+    "guide4you-builder": "1.0.*",
     "guide4you-proxy": "github:KlausBenndorf/guide4you-proxy#v1.0.0"
   },
   "devDependencies": {
