--- a/package.json
+++ b/package.json
@@ -20,19 +20,24 @@
     "type": "git",
     "url": "https://github.com/KlausBenndorf/guide4you-module-search"
   },
-  "dependencies": {
-    "guide4you": "1.3.*",
-    "guide4you-proxy": "github:KlausBenndorf/guide4you-proxy#v1.0.0"
+  "peerDependencies": {
+    "guide4you": "2.0.*",
+    "jquery": "3.2.1",
+    "openlayers": "github:KlausBenndorf/ol3#g4u3_v4.1.0"
   },
   "devDependencies": {
-    "guide4you-builder": "1.1.*",
-    "concurrently": "3.1.0",
+    "guide4you": "2.0.*",
+    "jquery": "3.2.1",
+    "openlayers": "github:KlausBenndorf/ol3#g4u3_v4.1.0",
+    "guide4you-proxy": "github:KlausBenndorf/guide4you-proxy#v1.0.0",
+    "guide4you-builder": "2.0.*",
+    "concurrently": "^3.4.0",
     "esdoc": "0.5.2",
-    "mocha": "3.2.0",
-    "selenium-webdriver": "3.0.1",
+    "mocha": "3.4.2",
+    "selenium-webdriver": "3.4.0",
     "phantomjs-prebuilt": "2.1.14",
-    "standard": "8.6.0",
-    "wait-on": "2.0.1"
+    "standard": "10.0.2",
+    "wait-on": "2.0.2"
   },
   "scripts": {
     "linkRepos": "g4u-link guide4you",
