--- a/package.json
+++ b/package.json
@@ -26,16 +26,17 @@
     "openlayers": "github:KlausBenndorf/ol3#g4u3_v4.1.0"
   },
   "devDependencies": {
-    "guide4you": "2.0.*",
-    "jquery": "3.2.1",
-    "openlayers": "github:KlausBenndorf/ol3#g4u3_v4.1.0",
-    "guide4you-proxy": "github:KlausBenndorf/guide4you-proxy#v1.0.0",
-    "guide4you-builder": "2.0.*",
     "concurrently": "^3.4.0",
     "esdoc": "0.5.2",
+    "guide4you": "2.0.*",
+    "guide4you-builder": "2.0.*",
+    "guide4you-proxy": "github:KlausBenndorf/guide4you-proxy#v1.0.0",
+    "http-server": "^0.10.0",
+    "jquery": "3.2.1",
     "mocha": "3.4.2",
-    "selenium-webdriver": "3.4.0",
+    "openlayers": "github:KlausBenndorf/ol3#g4u3_v4.1.0",
     "phantomjs-prebuilt": "2.1.14",
+    "selenium-webdriver": "3.4.0",
     "standard": "10.0.2",
     "wait-on": "2.0.2"
   },
