--- a/package.json
+++ b/package.json
@@ -17,24 +17,31 @@
     "Josef Schugt <josef.schugt@benndorf.de>",
     "Simon Seyock <simonseyock@gmail.com>"
   ],
-  "dependencies": {
-    "guide4you": "1.3.*",
-    "guide4you-proxy": "github:KlausBenndorf/guide4you-proxy#v1.0.0",
-    "guide4you-module-search": "1.3.*"
+  "peerDependencies": {
+    "guide4you": "2.0.*",
+    "guide4you-module-search": "2.0.*",
+    "jquery": "3.2.1",
+    "openlayers": "github:KlausBenndorf/ol3#g4u3_v4.1.0"
   },
   "devDependencies": {
-    "guide4you-builder": "1.1.*",
-    "concurrently": "3.1.0",
-    "esdoc": "0.4.8",
-    "mocha": "3.1.2",
-    "phantomjs-prebuilt": "2.1.13",
-    "selenium-webdriver": "2.53.3",
-    "standard": "8.4.0",
-    "wait-on": "1.5.3"
+    "concurrently": "^3.4.0",
+    "esdoc": "0.5.2",
+    "guide4you": "2.0.*",
+    "guide4you-builder": "2.0.*",
+    "guide4you-module-search": "2.0.*",
+    "guide4you-proxy": "github:KlausBenndorf/guide4you-proxy#v1.0.0",
+    "http-server": "^0.10.0",
+    "jquery": "3.2.1",
+    "mocha": "3.4.2",
+    "openlayers": "github:KlausBenndorf/ol3#g4u3_v4.1.0",
+    "phantomjs-prebuilt": "2.1.14",
+    "selenium-webdriver": "3.4.0",
+    "standard": "10.0.2",
+    "wait-on": "2.0.2"
   },
   "scripts": {
     "linkRepos": "g4u-link guide4you guide4you-module-search",
-    "unlinkRepos": "g4u-unlink guide4you guide4you-module-search" ,
+    "unlinkRepos": "g4u-unlink guide4you guide4you-module-search",
     "build": "g4u-build -m prod -c",
     "dev": "g4u-build -m dev -c",
     "lint": "eslint src/ tests/",
