--- a/package.json
+++ b/package.json
@@ -21,14 +21,14 @@
     "url": "https://github.com/KlausBenndorf/guide4you-module-search"
   },
   "peerDependencies": {
-    "guide4you": "2.0.*",
+    "guide4you": "2.1.*",
     "jquery": "3.2.1",
     "openlayers": "github:KlausBenndorf/ol3#g4u3_v4.1.0"
   },
   "devDependencies": {
     "concurrently": "^3.4.0",
     "esdoc": "0.5.2",
-    "guide4you": "2.0.*",
+    "guide4you": "2.1.*",
     "guide4you-builder": "2.0.*",
     "guide4you-proxy": "github:KlausBenndorf/guide4you-proxy#v1.0.0",
     "http-server": "^0.10.0",
@@ -46,9 +46,9 @@
     "unlinkRepos": "g4u-unlink guide4you",
     "build": "g4u-build -m prod -c",
     "dev": "g4u-build -m dev -c",
-    "prepublishOnly": "npm test && git add dist/ && git commit --amend",
     "lint": "eslint src/ tests/",
-    "buildTests": "concurrently \"g4u-buildTests\" \"npm run dist\"",
+    "version": "(npm run test && git add -A) || git checkout .",
+    "buildTests": "concurrently \"g4u-buildTests -i node_modules/guide4you\" \"npm run dist\"",
     "runTests": "wait-on -l http-get://localhost:8089 && mocha build/tests/*",
     "test": "npm run lint && npm run buildTests && concurrently --kill-others --success first \"http-server ./ -p 8089 -s\" \"npm run runTests\" && echo \"Tests completed successfully\"",
     "doc": "esdoc -c esdoc.json"
