--- a/package.json
+++ b/package.json
@@ -24,43 +24,49 @@
     "openlayers": "github:KlausBenndorf/ol3#g4u3_v4.6.4"
   },
   "dependencies": {
-    "better-scroll": "1.8.4",
+    "better-scroll": "1.12.1",
+    "cross-env": "^5.2.0",
     "csscolorparser": "1.0.3",
-    "lodash": "4.17.5",
+    "lodash": "4.17.10",
     "notifyjs-browser": "0.4.2",
-    "proj4": "2.4.3",
+    "proj4": "2.4.4",
     "strip-json-comments": "2.0.1"
   },
   "devDependencies": {
     "babel-polyfill": "^6.26.0",
-    "concurrently": "^3.4.0",
-    "esdoc": "^1.0.3",
+    "concurrently": "^3.6.0",
+    "esdoc": "^1.1.0",
     "esdoc-standard-plugin": "^1.0.0",
-    "guide4you-builder": "3.0.1",
+    "guide4you-builder": "3.3.0",
     "guide4you-proxy": "github:KlausBenndorf/guide4you-proxy#v1.1.0",
-    "http-server": "^0.11.0",
+    "http-server": "^0.11.1",
     "jquery": "3.3.1",
-    "mocha": "^5.0.4",
+    "mocha": "^5.2.0",
     "openlayers": "github:KlausBenndorf/ol3#g4u3_v4.6.4",
     "phantomjs-prebuilt": "2.1.14",
     "selenium-webdriver": "3.6.0",
-    "standard": "^11.0.0",
+    "standard": "^11.0.1",
     "wait-on": "^2.1.0"
   },
   "scripts": {
-    "dist": "g4u-build -m dist -c conf/dist",
-    "build": "g4u-build -m prod -c",
-    "debugBuild": "g4u-build -d -m prod -c",
-    "dev": "g4u-build -m dev -c",
+    "dist": "g4u-build -c conf/dist/webpack.dist.js",
+    "dev:simple": "cross-env-shell DEVELOPMENT=true g4u-build -c conf/simple/webpack.dev.js",
+    "prod:simple": "rimraf build/simple/* && g4u-build -c conf/simple/webpack.prod.js",
+    "debug:simple": "rimraf build/simple/* && g4u-build -c conf/simple/webpack.prod.js",
+    "dev:full": "cross-env-shell DEVELOPMENT=true g4u-build -c conf/full/webpack.dev.js",
+    "prod:full": "rimraf build/full/* && g4u-build -c conf/full/webpack.prod.js",
+    "debug:full": "rimraf build/full/* && g4u-build -c conf/full/webpack.prod.js",
     "lint": "eslint src/ tests/",
     "version": "(npm run test && npm run doc && git add -A) || git checkout .",
+    "server": "http-server ./ -p 8089 -s",
     "buildTests": "concurrently \"g4u-buildTests\" \"npm run dist\"",
-    "runTests": " concurrently --kill-others --success first \"http-server ./ -p 8089 -s\" \"wait-on -l http-get://localhost:8089 && mocha build/tests/*\"",
+    "runTests": " concurrently --kill-others --success first \"npm run server\" \"wait-on -l http-get://localhost:8089 && mocha build/tests/*\"",
     "test": "npm run lint && npm run buildTests && npm run runTests && echo \"Tests completed successfully\"",
     "doc": "esdoc -c esdoc.json",
     "typing": "jsdoc -t node_modules/tsd-jsdoc -r conf/dist/entry.js src/ -d dist/"
   },
   "main": "./dist/g4u.js",
   "module": "./config/dist/entry.js",
-  "types": "./dist/g4u.d.ts"
+  "types": "./dist/g4u.d.ts",
+  "false": {}
 }
