--- a/.eslintrc
+++ b/.eslintrc
@@ -2,6 +2,7 @@
   "extends": ["standard"],
   "rules": {
     "max-len": ["error", 120],
-    "no-console": "error"
+    "no-console": "error",
+    "import/no-webpack-loader-syntax": "off"
   }
 }
