--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "concurrently": "^3.6.0",
     "esdoc": "^1.1.0",
     "esdoc-standard-plugin": "^1.0.0",
+    "eslint": "^5.1.0",
     "guide4you-builder": "3.2.1",
     "guide4you-proxy": "github:KlausBenndorf/guide4you-proxy#v1.1.0",
     "http-server": "^0.11.1",
@@ -45,7 +46,7 @@
     "openlayers": "github:KlausBenndorf/ol3#g4u3_v5.0.2",
     "phantomjs-prebuilt": "2.1.14",
     "selenium-webdriver": "3.6.0",
-    "standard": "^11.0.1",
+    "eslint-config-standard": "^11.0.0",
     "wait-on": "^2.1.0"
   },
   "scripts": {
