--- a/package.json
+++ b/package.json
@@ -24,29 +24,33 @@
     "ol": "github:KlausBenndorf/ol3#g4u3_v5.2.0"
   },
   "dependencies": {
-    "better-scroll": "1.12.1",
+    "better-scroll": "1.13.2",
     "csscolorparser": "1.0.3",
-    "lodash": "4.17.10",
+    "lodash": "4.17.11",
     "notifyjs-browser": "0.4.2",
-    "proj4": "2.4.4",
+    "proj4": "2.5.0",
     "strip-json-comments": "2.0.1"
   },
   "devDependencies": {
-    "babel-polyfill": "^6.26.0",
-    "concurrently": "^3.6.0",
-    "esdoc": "^1.1.0",
-    "esdoc-standard-plugin": "^1.0.0",
-    "eslint": "^5.1.0",
+    "babel-polyfill": "6.26.0",
+    "concurrently": "4.0.1",
+    "esdoc": "1.1.0",
+    "esdoc-standard-plugin": "1.0.0",
+    "eslint": "5.7.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-node": "^7.0.1",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0",
     "guide4you-builder": "3.4.0",
     "guide4you-proxy": "github:KlausBenndorf/guide4you-proxy#v1.1.0",
-    "http-server": "^0.11.1",
+    "http-server": "0.11.1",
     "jquery": "3.3.1",
-    "mocha": "^5.2.0",
+    "mocha": "5.2.0",
     "ol": "github:KlausBenndorf/ol3#g4u3_v5.2.0",
     "phantomjs-prebuilt": "2.1.14",
     "selenium-webdriver": "3.6.0",
-    "eslint-config-standard": "^11.0.0",
-    "wait-on": "^2.1.0"
+    "wait-on": "3.1.0"
   },
   "scripts": {
     "dist": "rimraf dist/* && g4u-build -c conf/dist/webpack.dist.js",
