--- a/package.json
+++ b/package.json
@@ -21,29 +21,29 @@
     "url": "https://github.com/KlausBenndorf/guide4you-module-search"
   },
   "peerDependencies": {
-    "guide4you": "3.0.*",
+    "guide4you": "3.1.*",
     "jquery": "3.3.1",
-    "openlayers": "github:KlausBenndorf/ol3#g4u3_v5.0.2"
+    "openlayers": "github:KlausBenndorf/ol3#g4u3_v5.2.0"
   },
   "devDependencies": {
-    "concurrently": "^3.6.0",
-    "esdoc": "^1.1.0",
-    "esdoc-standard-plugin": "^1.0.0",
-    "eslint": "^5.1.0",
-    "eslint-config-standard": "^11.0.0",
-    "guide4you": "3.0.*",
-    "guide4you-builder": "3.2.4",
+    "concurrently": "4.0.1",
+    "esdoc": "1.1.0",
+    "esdoc-standard-plugin": "1.0.0",
+    "eslint": "5.7.0",
+    "eslint-config-standard": "12.0.0",
+    "guide4you": "3.1.*",
+    "guide4you-builder": "3.4.0",
     "guide4you-proxy": "github:KlausBenndorf/guide4you-proxy#v1.1.0",
     "http-server": "0.11.1",
     "jquery": "3.3.1",
-    "mocha": "^5.2.0",
-    "openlayers": "github:KlausBenndorf/ol3#g4u3_v5.0.2",
+    "mocha": "5.2.0",
+    "openlayers": "github:KlausBenndorf/ol3#g4u3_v5.2.0",
     "phantomjs-prebuilt": "2.1.14",
     "selenium-webdriver": "3.6.0",
-    "wait-on": "2.1.0"
+    "wait-on": "3.1.0"
   },
   "scripts": {
-    "dist": "g4u-build -c conf/dist/webpack.dist.js",
+    "dist": "rimraf dist/* && g4u-build -c conf/dist/webpack.dist.js",
     "dev": "cross-env-shell DEVELOPMENT=true g4u-build -c conf/build/webpack.dev.js",
     "prod": "rimraf build/* && g4u-build -c conf/build/webpack.prod.js",
     "debug": "rimraf build/* && g4u-build -c conf/build/webpack.prod.js",
@@ -51,7 +51,7 @@
     "lint": "eslint src/ tests/",
     "version": "(npm run test && git add -A) || git checkout .",
     "server": "http-server ./ -p 8089 -s",
-    "buildTests": "concurrently \"g4u-buildTests -i node_modules/guide4you\" \"npm run dist\"",
+    "buildTests": "concurrently \"g4u-buildTests node_modules/guide4you/tests tests\" \"npm run dist\"",
     "runTests": "concurrently --kill-others --success first \"npm run server\" \"wait-on -l http-get://localhost:8089 && mocha build/tests/*\"",
     "test": "npm run lint && npm run buildTests && npm run runTests && echo \"Tests completed successfully\"",
     "doc": "esdoc -c esdoc.json"
