--- a/package.json
+++ b/package.json
@@ -18,34 +18,43 @@
     "Simon Seyock <simonseyock@gmail.com>"
   ],
   "peerDependencies": {
-    "guide4you": "2.3.*",
-    "guide4you-module-search": "2.3.*",
-    "jquery": "3.2.1",
-    "openlayers": "github:KlausBenndorf/ol3#g4u3_v4.1.0"
+    "guide4you": "3.1.*",
+    "guide4you-module-search": "3.1.1",
+    "jquery": "3.3.1",
+    "ol": "github:KlausBenndorf/ol3#g4u3_v5.2.0"
   },
   "devDependencies": {
-    "concurrently": "^3.4.0",
-    "esdoc": "0.5.2",
-    "guide4you": "2.3.*",
-    "guide4you-builder": "2.1.1",
-    "guide4you-module-search": "2.2.*",
-    "guide4you-proxy": "github:KlausBenndorf/guide4you-proxy#v1.0.0",
-    "http-server": "^0.10.0",
-    "jquery": "3.2.1",
-    "mocha": "3.4.2",
-    "openlayers": "github:KlausBenndorf/ol3#g4u3_v4.1.0",
+    "concurrently": "4.0.1",
+    "esdoc": "1.1.0",
+    "esdoc-standard-plugin": "1.0.0",
+    "eslint": "5.7.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-node": "^7.0.1",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "guide4you": "3.1.*",
+    "guide4you-builder": "3.4.0",
+    "guide4you-module-search": "3.1.*",
+    "guide4you-proxy": "github:KlausBenndorf/guide4you-proxy#v1.1.0",
+    "http-server": "0.11.1",
+    "jquery": "3.3.1",
+    "mocha": "5.2.0",
+    "ol": "github:KlausBenndorf/ol3#g4u3_v5.2.0",
     "phantomjs-prebuilt": "2.1.14",
-    "selenium-webdriver": "3.4.0",
-    "standard": "10.0.2",
-    "wait-on": "2.0.2"
+    "selenium-webdriver": "3.6.0",
+    "wait-on": "3.1.0"
   },
   "scripts": {
-    "linkRepos": "g4u-link guide4you guide4you-module-search",
-    "unlinkRepos": "g4u-unlink guide4you guide4you-module-search",
-    "build": "g4u-build -m prod -c",
-    "dev": "g4u-build -m dev -c",
-    "lint": "eslint src/ tests/",
-    "test": "npm run lint",
+    "dev": "cross-env-shell DEVELOPMENT=true g4u-build -c conf/webpack.dev.js",
+    "dist": "rimraf build/* && g4u-build -c conf/webpack.dist.js",
+    "grab": "g4u-grab guide4you-builder guide4you guide4you-module-search guide4you-module-search-guide4you-server",
+    "lint": "eslint src/",
+    "version": "(npm run test && git add -A) || git checkout .",
+    "server": "http-server ./ -p 8089 -s",
+    "buildTests": "concurrently \"g4u-buildTests node_modules/guide4you/tests node_modules/guide4you-module-search/tests\" \"npm run dist\"",
+    "runTests": "concurrently --kill-others --success first \"npm run server\" \"wait-on -l http-get://localhost:8089 && mocha build/tests/*\"",
+    "test": "npm run lint && npm run buildTests && npm run runTests && echo \"Tests completed successfully\"",
     "doc": "esdoc -c esdoc.json"
   }
 }
