--- a/package.json
+++ b/package.json
@@ -18,13 +18,14 @@
     "Simon Seyock <simonseyock@gmail.com>"
   ],
   "peerDependencies": {
-    "guide4you": "3.1.*",
-    "guide4you-module-search": "3.1.1",
+    "guide4you": "3.3.*",
+    "guide4you-module-search": "3.2.*",
     "jquery": "3.3.1",
-    "ol": "github:KlausBenndorf/ol3#g4u3_v5.2.0"
+    "ol": "5.2.0"
   },
   "devDependencies": {
     "concurrently": "4.0.1",
+    "cross-env": "^5.2.0",
     "esdoc": "1.1.0",
     "esdoc-standard-plugin": "1.0.0",
     "eslint": "5.7.0",
@@ -33,14 +34,14 @@
     "eslint-plugin-node": "^7.0.1",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
-    "guide4you": "3.1.*",
-    "guide4you-builder": "3.4.0",
-    "guide4you-module-search": "3.1.*",
+    "guide4you": "3.3.*",
+    "guide4you-builder": "3.5.0",
+    "guide4you-module-search": "3.2.*",
     "guide4you-proxy": "github:KlausBenndorf/guide4you-proxy#v1.1.0",
     "http-server": "0.11.1",
     "jquery": "3.3.1",
     "mocha": "5.2.0",
-    "ol": "github:KlausBenndorf/ol3#g4u3_v5.2.0",
+    "ol": "5.2.0",
     "phantomjs-prebuilt": "2.1.14",
     "selenium-webdriver": "3.6.0",
     "wait-on": "3.1.0"
@@ -52,9 +53,11 @@
     "lint": "eslint src/",
     "version": "(npm run test && git add -A) || git checkout .",
     "server": "http-server ./ -p 8089 -s",
-    "buildTests": "concurrently \"g4u-buildTests node_modules/guide4you/tests node_modules/guide4you-module-search/tests\" \"npm run dist\"",
+    "buildTests": "g4u-buildTests node_modules/guide4you/tests node_modules/guide4you-module-search/tests",
+    "buildTestsAndEnv": "concurrently \"npm run buildTests\" \"npm run dist\"",
+    "test": "npm run lint && npm run buildTestsAndEnv && npm run runTests && echo \"Tests completed successfully\"",
+    "test:fast": "npm run buildTests && npm run runTests && echo \"Tests completed successfully\"",
     "runTests": "concurrently --kill-others --success first \"npm run server\" \"wait-on -l http-get://localhost:8089 && mocha build/tests/*\"",
-    "test": "npm run lint && npm run buildTests && npm run runTests && echo \"Tests completed successfully\"",
     "doc": "esdoc -c esdoc.json"
   }
 }
