--- a/package.json
+++ b/package.json
@@ -64,10 +64,10 @@
     "dist": "rimraf dist/* && g4u-build -c conf/dist/webpack.dist.js",
     "dev:simple": "cross-env-shell DEVELOPMENT=true g4u-build -c conf/simple/webpack.dev.js",
     "prod:simple": "rimraf build/simple/* && g4u-build -c conf/simple/webpack.prod.js",
-    "debug:simple": "rimraf build/simple/* && g4u-build -c conf/simple/webpack.prod.js",
+    "debug:simple": "g4u-build -c conf/simple/webpack.debug.js",
     "dev:full": "cross-env-shell DEVELOPMENT=true g4u-build -c conf/full/webpack.dev.js",
     "prod:full": "rimraf build/full/* && g4u-build -c conf/full/webpack.prod.js",
-    "debug:full": "rimraf build/full/* && g4u-build -c conf/full/webpack.prod.js",
+    "debug:full": "g4u-build -c conf/full/webpack.debug.js",
     "lint": "eslint src/ tests/",
     "version": "(npm run test && npm run doc && git add -A) || git checkout .",
     "server": "http-server ./ -p 8089 -s",
