--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "url": "https://github.com/KlausBenndorf/guide4you"
   },
   "peerDependencies": {
-    "jquery": "3.3.1",
+    "jquery": "3.4.1",
     "ol": "5.3.0"
   },
   "dependencies": {
@@ -52,7 +52,7 @@
     "guide4you-builder": "3.5.1",
     "guide4you-proxy": "github:KlausBenndorf/guide4you-proxy#v1.1.0",
     "http-server": "0.11.1",
-    "jquery": "3.3.1",
+    "jquery": "3.4.1",
     "mocha": "5.2.0",
     "ol": "5.3.0",
     "phantomjs-prebuilt": "2.1.14",
@@ -68,6 +68,7 @@
     "dev:full": "cross-env-shell DEVELOPMENT=true g4u-build -c conf/full/webpack.dev.js",
     "prod:full": "rimraf build/full/* && g4u-build -c conf/full/webpack.prod.js",
     "debug:full": "g4u-build -c conf/full/webpack.debug.js",
+    "full": "npm run prod:full && npm run debug:full",
     "lint": "eslint src/ tests/",
     "version": "(npm run test && npm run doc && git add -A) || git checkout .",
     "server": "http-server ./ -p 8089 -s",
