--- a/conf/full/client.json5
+++ b/conf/full/client.json5
@@ -1,7 +1,4 @@
 {
-/*
- * This software uses strip-json-comments so you can comment in any JSON-file.
- */
 // Beware of breaking the JSON-syntax!
   "proxy": "{{{ajaxProxy}}}",
   "languageSettings": {
@@ -103,6 +100,7 @@
         "printButton",
         "infoButton",
         "singleDrawButton",
+        "zoomToBbox",
         "helpButton"
       ],
       "float": [
