--- a/conf/full/styles.json5
+++ b/conf/full/styles.json5
@@ -13,7 +13,7 @@
         "color": "black"
       },
       "stroke": {
-        "color": "white"
+        "color": "white",
       },
       "textProperty": "name"
     },
