--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "lodash": "4.17.15",
     "notifyjs-browser": "0.4.2",
     "proj4": "2.6.0",
-    "strip-json-comments": "3.0.1"
+    "json5": "^2.1.1"
   },
   "devDependencies": {
     "babel-polyfill": "6.26.0",
